@@ -3,7 +3,10 @@ package com.slifesys.sagnus.adm.application.usecase;
 import com.slifesys.sagnus.adm.application.command.CreateCompromissoCommand;
 import com.slifesys.sagnus.adm.application.port.AgendaRepositoryPort;
 import com.slifesys.sagnus.adm.application.result.CreateCompromissoResult;
-import com.slifesys.sagnus.adm.domain.model.*;
+import com.slifesys.sagnus.adm.domain.model.agenda.Compromisso;
+import com.slifesys.sagnus.adm.domain.model.agenda.Convite;
+import com.slifesys.sagnus.adm.domain.model.agenda.Notificacao;
+import com.slifesys.sagnus.adm.domain.model.audit.Audit;
 
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -24,19 +27,19 @@ public class CreateCompromissoUseCase {
     public CreateCompromissoResult execute(CreateCompromissoCommand cmd) {
         var now = Instant.now();
 
-        List<Convite> convites = cmd.convidadosColaboradorIds() == null ? List.of()
+        List<Convite> convites = cmd.convidadosColaboradorIds() == null ? java.util.Collections.emptyList()
                 : cmd.convidadosColaboradorIds().stream().map(Convite::new).toList();
 
-        List<Notificacao> notificacoes = cmd.notificacoes() == null ? List.of()
-                : cmd.notificacoes().stream().map(n -> new Notificacao(n.data(), n.hora(), n.tipo())).toList();
+        List<Notificacao> notificacoes = cmd.notificacoes() == null ? java.util.Collections.emptyList()
+                : cmd.notificacoes().stream().map(n -> new Notificacao(n.data(), n.hora() != null ? java.time.LocalTime.parse(n.hora()) : null, String.valueOf(n.tipo()))).toList();
 
         var compromisso = new Compromisso(
                 null,
-                new CategoriaId(cmd.categoriaId()),
+                cmd.categoriaId(),
                 cmd.colaboradorId(),
                 cmd.dataCompromisso(),
-                cmd.hora(),
-                cmd.duracao(),
+                cmd.hora() != null ? java.time.LocalTime.parse(cmd.hora()) : null,
+                cmd.duracao() != null ? cmd.duracao().intValue() : null,
                 cmd.onde(),
                 cmd.descricao(),
                 cmd.tipo(),
@@ -46,6 +49,6 @@ public class CreateCompromissoUseCase {
         );
 
         var saved = repo.saveCompromisso(compromisso);
-        return new CreateCompromissoResult(saved.id().value());
+        return new CreateCompromissoResult(saved.getId());
     }
 }
